--- a/index.html
+++ b/index.html
@@ -2,35 +2,34 @@
 layout: default
 ---
 
-<div>
-    {% for post in site.posts %}
-    <div class="blog-short">
-        <h3><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h3>
-
-        <div>
-            <small>
-                <i class="fa fa-calendar"></i>
-                <time>
-                    {{ post.date | date:'%A, %B %d, %Y'}}
-                </time>
-            </small>
-        </div>
-        <div class="margin10">
-            <small>
-                <i class="fa fa-tag"></i>
-                {% for tag in post.tags %}
-                <span class="label label-tag"><a href="{{site.baseurl}}/tag/{{tag}}">{{site.data.tags[tag]}}</a></span>
-                {% endfor %}
-            </small>
-        </div>
-        {% if post.thumbnail %}
-        <div class="imgcontainer col-xs-12 col-sm-4 col-md-3 col-lg-3">
-            <img src="{{post.thumbnail}}"
-                 alt="{{post.title}}" class="pull-left img-responsive thumb img-thumbnail"/>
-        </div>
-        {% endif %}
-        <article class="excerpt">{{post.excerpt}}</article>
-        <a class="pull-right marginBottom10" href="{{post.url | prepend: site.baseurl }}">Read More</a>
+{% for post in site.posts %}
+{% if post.published %}
+<div class="post-card mdl-card mdl-shadow--3dp">
+    <div class="mdl-card__title">
+        <h2 class="mdl-card__title-text"><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h2>
     </div>
-    {% endfor %}
+    <div class="mdl-card__supporting-text">
+        <small>
+            <i class="fa fa-calendar"></i>
+            <time>
+                {{ post.date | date:'%A, %B %d, %Y'}}
+            </time>
+        </small>
+        {{post.excerpt}}
+    </div>
+    <div class="mdl-card__actions mdl-card--border">
+        <i class="fa fa-tag"></i>
+        {% for tag in post.tags %}
+        <a href="{{site.baseurl}}/tag/{{tag}}" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--accent">
+            {{site.data.tags[tag]}}
+        </a>
+        {% endfor %}
+    </div>
+    <div class="mdl-card__menu">
+        <a href="{{post.url | prepend: site.baseurl}}" class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+            <i class="material-icons">link</i>
+        </a>
+    </div>
 </div>
+{% endif %}
+{% endfor %}
